[web] fix some spacing on home

--- a/apps/web/web/base.css
+++ b/apps/web/web/base.css
@@ -55,7 +55,7 @@ textarea {
 }
 
 .ease-in-out-fast {
-  transition: all ease-in-out 150ms;
+  transition: all ease-in-out 100ms;
 }
 .ease-in-out {
   transition: all ease-in-out 250ms;
